--- a/index.html
+++ b/index.html
@@ -1,122 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-   
-    <header class="header">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container header-block">
+      <a href="#" class="logo">Mobileapp</a>
+      <nav>
+        <ul class="header-menu list-none">
+          <li><a href="#" class="header-menu__link">HOME</a></li>
+          <li><a href="#" class="header-menu__link">FEATURES</a></li>
+          <li><a href="#" class="header-menu__link">TEAM</a></li>
+          <li><a href="#" class="header-menu__link">TESTIMONIALS</a></li>
+          <li><a href="#" class="header-menu__link">CONTACT</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
       <div class="container">
-        <a href="#">Mobileapp</a>
-        <nav>
-          <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">FEATURES</a></li>
-            <li><a href="#">TEAM</a></li>
-            <li><a href="#">TESTIMONIALS</a></li>
-            <li><a href="#">CONTACT</a></li>
-          </ul>
-        </nav>
+        <h1 class="title">Introducing Mobileapp</h1>
+        <p>Maecenas vitae tellus sapien. Prasent</p>
+        <ul>
+          <li>semper scelerisque tristique a enim</li>
+          <li>Integer ut mattis nulla, eget vehicula elit</li>
+          <li>Prasent rutrum ac nunc et</li>
+        </ul>
+        <button type="button">Download</button>
+        <img src="./images/phone.png" alt="Phone" width="459" height="489" />
       </div>
-    </header>
 
-    <main>
-      <section>
-        <div class="container">
-          <h1 class="title">Introducing Mobileapp</h1>
-          <p>Maecenas vitae tellus sapien. Prasent</p>
-          <ul>
-            <li tabindex="0">semper scelerisque tristique a enim</li>
-            <li tabindex="0">Integer ut mattis nulla, eget vehicula elit</li>
-            <li tabindex="0">Prasent rutrum ac nunc et</li>
-          </ul>
-          <button type="button">Download</button>
+    </section>
+    <section class="section team">
+      <div class="container">
+        <h2 class="section-title">OUR TEAM</h2>
+        <p class="section-subtitle">
+          Nunc vulputate nibh sed congue facilisis. Curabitur posuere
+          scelerisque neque. In sit amet lectus non lacus sollicitudin cursus a
+          vitae felis. Praesent luctus mi quis nisi interdum eleifend.
+        </p>
+        <ul class="team-list list-none">
+          <li class="team-list__item">
+            <img src="./images/team1.jpg" class="team-list__thumbnail" alt="Jon Doe" width="264" height="260" />
+            <h3 class="tema-list__title">Jon Doe</h3>
+            <p class="team__list-position">Managing Direcor</p>
+          </li>
+          <li class="team-list__item">
+            <img src="./images/team2.jpg" class="team-list__thumbnail" alt="Jane Doe" width="264" height="260" />
+            <h3 class="tema-list__title">Jane Doe</h3>
+            <p class="team__list-position">Lead Designer</p>
+          </li>
+          <li class="team-list__item">
+            <img src="./images/team3.jpg" class="team-list__thumbnail" alt="Jon Doe" width="264" height="260" />
+            <h3 class="tema-list__title">Jon Doe</h3>
+            <p class="team__list-position">Lead Developer</p>
+          </li>
+          <li class="team-list__item">
+            <img src="./images/team4.jpg" class="team-list__thumbnail" alt="Jane Doe" width="264" height="260" />
+            <h3 class="tema-list__title">Jane Doe</h3>
+            <p class="team__list-position">Sr. UI Designer</p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-          <img src="./images/phone.png" alt="Phone" width="459" height="489" />
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <h2>OUR TEAM</h2>
-          <p>
-            Nunc vulputate nibh sed congue facilisis. Curabitur posuere
-            scelerisque neque. In sit amet lectus non lacus sollicitudin cursus
-            a vitae felis. Praesent luctus mi quis nisi interdum eleifend.
-          </p>
-          <ul>
-            <li>
-              <img
-                src="./images/team1.jpg"
-                alt="Jon Doe"
-                width="264"
-                height="260"
-              />
-              <h3>Jon Doe</h3>
-              <p>Managing Direcor</p>
-            </li>
-            <li>
-              <img
-                src="./images/team2.jpg"
-                alt="Jane Doe"
-                width="264"
-                height="260"
-              />
-              <h3>Jane Doe</h3>
-              <p>Lead Designer</p>
-            </li>
-            <li>
-              <img
-                src="./images/team3.jpg"
-                alt="Jon Doe"
-                width="264"
-                height="260"
-              />
-              <h3>Jon Doe</h3>
-              <p>Lead Developer</p>
-            </li>
+    <section class="section costumers">
+      <h2 class="section-title costumers-title">WHAT OUR COSTUMER’S SAY</h2>
+    </section>
 
-            <li>
-              <img
-                src="./images/team4.jpg"
-                alt="Jane Doe"
-                width="264"
-                height="260"
-              />
-              <h3>Jane Doe</h3>
-              <p>Sr. UI Designer</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
+    <section class="contacts">
+      <h2 class="section-title section-title--white"></h2>
+    </section>
+  </main>
 
-    <footer class="footer">
-      <img src="./images/fonBack.jpg" alt="Дерево" width="200" height="400"
-      style="
-      object-fit: cover;
-      object-position: center;"
-      >
-    </footer>
+  <footer class="footer"></footer>
 
-    <script src="./js/main.js"></script>
-  </body>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
-
-
-
- <div class="image">WWW</div>
